--- a/GPP32/GPP32.vcxproj
+++ b/GPP32/GPP32.vcxproj
@@ -133,8 +133,6 @@
   <ItemGroup>
     <ClInclude Include="library\Console.hpp" />
     <ClInclude Include="library\d3d11Hook.h" />
-    <ClInclude Include="library\detours\detours.h" />
-    <ClInclude Include="library\detours\HookManager.h" />
     <ClInclude Include="library\HotKey.hpp" />
     <ClInclude Include="library\imgui\Font.h" />
     <ClInclude Include="library\imgui\imconfig.h" />
@@ -148,33 +146,24 @@
     <ClInclude Include="library\imgui\imstb_textedit.h" />
     <ClInclude Include="library\imgui\imstb_truetype.h" />
     <ClInclude Include="library\json.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_all.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_containers.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_flags.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_format.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_fuse.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_iostream.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_switch.hpp" />
-    <ClInclude Include="library\magic_enum\magic_enum_utility.hpp" />
     <ClInclude Include="library\UnityResolve.hpp" />
     <ClInclude Include="main\features\camera\list\CameraList.h" />
     <ClInclude Include="main\features\items\esp\ItemEsp.h" />
     <ClInclude Include="main\features\items\list\ItemList.h" />
     <ClInclude Include="main\features\player\esp\PlayerEsp.h" />
     <ClInclude Include="main\features\setting\setting.h" />
-    <ClInclude Include="main\GameDefine\InjectionDetector.h" />
-    <ClInclude Include="main\GameDefine\ObscuredCheatingDetector.h" />
-    <ClInclude Include="main\GameDefine\PickItem.h" />
-    <ClInclude Include="main\GameDefine\PickItemDataConfig.h" />
-    <ClInclude Include="main\GameDefine\PickItemNet.h" />
-    <ClInclude Include="main\GameDefine\RoleLogic.h" />
+    <ClInclude Include="main\GameDefine\AnimatorControl.h" />
+    <ClInclude Include="main\GameDefine\AntiCheat\InjectionDetector.h" />
+    <ClInclude Include="main\GameDefine\AntiCheat\ObscuredCheatingDetector.h" />
+    <ClInclude Include="main\GameDefine\BodyPart.h" />
+    <ClInclude Include="main\GameDefine\Pickitem\PickItem.h" />
+    <ClInclude Include="main\GameDefine\Pickitem\PickItemDataConfig.h" />
+    <ClInclude Include="main\GameDefine\Pickitem\PickItemNet.h" />
+    <ClInclude Include="main\GameDefine\Role\RoleControl.h" />
+    <ClInclude Include="main\GameDefine\Role\RoleLogic.h" />
+    <ClInclude Include="main\GameDefine\Role\Role.h" />
     <ClInclude Include="main\main.h" />
     <ClInclude Include="main\features\player\list\PlayerList.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="library\detours\[x64]detours.lib" />
-    <Library Include="library\detours\[x86]detours.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
