--- a/GPP32/GPP32.vcxproj
+++ b/GPP32/GPP32.vcxproj
@@ -126,11 +126,13 @@
     <ClCompile Include="library\imgui\implot_demo.cpp" />
     <ClCompile Include="library\imgui\implot_items.cpp" />
     <ClCompile Include="main\features.cpp" />
-    <ClCompile Include="main\features\aim\Aim.cpp" />
+    <ClCompile Include="main\features\memory\player\PlayerMemory.cpp" />
+    <ClCompile Include="main\features\player\aim\PlayerAim.cpp" />
     <ClCompile Include="main\features\camera\list\CameraList.cpp" />
     <ClCompile Include="main\features\items\esp\ItemEsp.cpp" />
     <ClCompile Include="main\features\items\list\ItemList.cpp" />
     <ClCompile Include="main\features\player\esp\PlayerEsp.cpp" />
+    <ClCompile Include="main\features\setting\debug.cpp" />
     <ClCompile Include="main\features\setting\setting.cpp" />
     <ClCompile Include="main\main.cpp" />
     <ClCompile Include="main\features\player\list\PlayerList.cpp" />
@@ -152,11 +154,13 @@
     <ClInclude Include="library\imgui\imstb_truetype.h" />
     <ClInclude Include="library\json.hpp" />
     <ClInclude Include="library\UnityResolve.hpp" />
-    <ClInclude Include="main\features\aim\Aim.h" />
+    <ClInclude Include="main\features\memory\player\PlayerMemory.h" />
+    <ClInclude Include="main\features\player\aim\PlayerAim.h" />
     <ClInclude Include="main\features\camera\list\CameraList.h" />
     <ClInclude Include="main\features\items\esp\ItemEsp.h" />
     <ClInclude Include="main\features\items\list\ItemList.h" />
     <ClInclude Include="main\features\player\esp\PlayerEsp.h" />
+    <ClInclude Include="main\features\setting\debug.h" />
     <ClInclude Include="main\features\setting\setting.h" />
     <ClInclude Include="main\GameDefine\Animator\AnimatorControl.h" />
     <ClInclude Include="main\GameDefine\AntiCheat\InjectionDetector.h" />
