--- a/GPP32/GPP32.vcxproj
+++ b/GPP32/GPP32.vcxproj
@@ -125,8 +125,10 @@
     <ClCompile Include="library\imgui\implot.cpp" />
     <ClCompile Include="library\imgui\implot_demo.cpp" />
     <ClCompile Include="library\imgui\implot_items.cpp" />
+    <ClCompile Include="library\veh.cpp" />
     <ClCompile Include="main\features.cpp" />
     <ClCompile Include="main\features\memory\player\PlayerMemory.cpp" />
+    <ClCompile Include="main\features\memory\weapon\WeaponMemory.cpp" />
     <ClCompile Include="main\features\player\aim\PlayerAim.cpp" />
     <ClCompile Include="main\features\camera\list\CameraList.cpp" />
     <ClCompile Include="main\features\items\esp\ItemEsp.cpp" />
@@ -154,7 +156,9 @@
     <ClInclude Include="library\imgui\imstb_truetype.h" />
     <ClInclude Include="library\json.hpp" />
     <ClInclude Include="library\UnityResolve.hpp" />
+    <ClInclude Include="library\veh.h" />
     <ClInclude Include="main\features\memory\player\PlayerMemory.h" />
+    <ClInclude Include="main\features\memory\weapon\WeaponMemory.h" />
     <ClInclude Include="main\features\player\aim\PlayerAim.h" />
     <ClInclude Include="main\features\camera\list\CameraList.h" />
     <ClInclude Include="main\features\items\esp\ItemEsp.h" />
@@ -165,6 +169,7 @@
     <ClInclude Include="main\GameDefine\Animator\AnimatorControl.h" />
     <ClInclude Include="main\GameDefine\AntiCheat\InjectionDetector.h" />
     <ClInclude Include="main\GameDefine\AntiCheat\ObscuredCheatingDetector.h" />
+    <ClInclude Include="main\GameDefine\Camera\CameraMove.hpp" />
     <ClInclude Include="main\GameDefine\Pickitem\PickItem.h" />
     <ClInclude Include="main\GameDefine\Pickitem\PickItemDataConfig.h" />
     <ClInclude Include="main\GameDefine\Pickitem\PickItemNet.h" />
@@ -172,6 +177,9 @@
     <ClInclude Include="main\GameDefine\Role\RoleControl.h" />
     <ClInclude Include="main\GameDefine\Role\RoleControlBase.h" />
     <ClInclude Include="main\GameDefine\Role\RoleLogic.h" />
+    <ClInclude Include="main\GameDefine\Weapon\BulletSpeedAndGravity.h" />
+    <ClInclude Include="main\GameDefine\Weapon\SOWeaponControl.h" />
+    <ClInclude Include="main\GameDefine\Weapon\UpRecoilInfo.h" />
     <ClInclude Include="main\main.h" />
     <ClInclude Include="main\features\player\list\PlayerList.h" />
   </ItemGroup>
