--- a/GPP32/GPP32.vcxproj
+++ b/GPP32/GPP32.vcxproj
@@ -32,6 +32,11 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
     <InterproceduralOptimization>true</InterproceduralOptimization>
+    <UseInteloneMKL>No</UseInteloneMKL>
+    <UseIntelIPP1A>false</UseIntelIPP1A>
+    <UseInteloneTBB>false</UseInteloneTBB>
+    <UseMpiLibrary1A>MSMPI</UseMpiLibrary1A>
+    <BasePlatformToolset>v143</BasePlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -92,7 +97,7 @@
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <ControlFlowGuard>false</ControlFlowGuard>
-      <FloatingPointModel>Fast</FloatingPointModel>
+      <FloatingPointModel>Precise</FloatingPointModel>
       <FloatingPointExceptions>
       </FloatingPointExceptions>
       <GuardEHContMetadata>
@@ -134,6 +139,7 @@
     <ClCompile Include="main\features\items\esp\ItemEsp.cpp" />
     <ClCompile Include="main\features\items\list\ItemList.cpp" />
     <ClCompile Include="main\features\player\esp\PlayerEsp.cpp" />
+    <ClCompile Include="main\features\setting\analyze.cpp" />
     <ClCompile Include="main\features\setting\debug.cpp" />
     <ClCompile Include="main\features\setting\setting.cpp" />
     <ClCompile Include="main\main.cpp" />
@@ -164,6 +170,7 @@
     <ClInclude Include="main\features\items\esp\ItemEsp.h" />
     <ClInclude Include="main\features\items\list\ItemList.h" />
     <ClInclude Include="main\features\player\esp\PlayerEsp.h" />
+    <ClInclude Include="main\features\setting\analyze.h" />
     <ClInclude Include="main\features\setting\debug.h" />
     <ClInclude Include="main\features\setting\setting.h" />
     <ClInclude Include="main\GameDefine\Animator\AnimatorControl.h" />
@@ -173,6 +180,7 @@
     <ClInclude Include="main\GameDefine\Pickitem\PickItem.h" />
     <ClInclude Include="main\GameDefine\Pickitem\PickItemDataConfig.h" />
     <ClInclude Include="main\GameDefine\Pickitem\PickItemNet.h" />
+    <ClInclude Include="main\GameDefine\Role\HitPart.h" />
     <ClInclude Include="main\GameDefine\Role\Role.h" />
     <ClInclude Include="main\GameDefine\Role\RoleControl.h" />
     <ClInclude Include="main\GameDefine\Role\RoleControlBase.h" />
