--- a/GPP32/GPP32.vcxproj.filters
+++ b/GPP32/GPP32.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="main\features\cars\esp\CarEsp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main\features\player\antiAim\AntiAim.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="library\Console.hpp">
@@ -248,64 +251,10 @@
     <ClInclude Include="main\features\cars\list\CarList.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheat.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="main\features\cars\esp\CarEsp.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="main\GameDefine\Role\RoleLogicServer.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatMove.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatConfig.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatMTP.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatCollider.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatUseItem.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatBullet.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatAction.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatCar.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatWeapon.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatBulletFireData.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatMeleeAttackData.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatHolySword.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatKill.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatJump.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatPoint.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\RoleCheatWave.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\NetworkServer_GameCheat.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="library\detours\detours.h">
@@ -323,7 +272,7 @@
     <ClInclude Include="main\GameDefine\Network\IGameWorldMessage.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="main\GameDefine\AntiCheat\CmdCheckRoleSize.h">
+    <ClInclude Include="main\features\player\antiAim\AntiAim.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
